# ImageEditor

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: BlendMode.cpp  BlendMode.hpp  Image.cpp  Image.hpp  Pixel.cpp  Pixel.hpp  main.cpp
src/filter/: Filter.cpp  Filter.hpp
tests/: FilterTests.cpp
